chore: en batch med retting av sonar-issues